# kazak-business

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
migrations/: deploy.ts
programs/crafting/: Cargo.toml
programs/crafting/src/: errors.rs  lib.rs
programs/crafting/src/instructions/: craft_item.rs  mod.rs
programs/item_nft/: Cargo.toml
programs/item_nft/src/: errors.rs  lib.rs  state.rs
programs/item_nft/src/instructions/: burn_item.rs  mint_item.rs  mod.rs
programs/magic_token/: Cargo.toml
programs/magic_token/src/: errors.rs  lib.rs  state.rs
programs/magic_token/src/instructions/: initialize_magic_config.rs  mint_magic.rs  mod.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: errors.rs  lib.rs  state.rs
programs/marketplace/src/instructions/: initialize_marketplace.rs  mod.rs  sell_item.rs
programs/resource_manager/: Cargo.toml
programs/resource_manager/src/: errors.rs  lib.rs  state.rs
programs/resource_manager/src/instructions/: burn_resource.rs  initialize_game.rs  mint_resource.rs  mod.rs
programs/search/: Cargo.toml
programs/search/src/: errors.rs  lib.rs  state.rs
programs/search/src/instructions/: initialize_player.rs  mod.rs  search_resources.rs
tests/: kazak_business.ts
