[workspace]
members = [
    "programs/resource_manager",
    "programs/search",
    "programs/item_nft",
    "programs/crafting",
    "programs/marketplace",
    "programs/magic_token"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1