[package]
name = "magic_token"
version = "0.1.0"
description = "Magic token program for Kozak Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magic_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }