[package]
name = "marketplace"
version = "0.1.0"
description = "Marketplace program for Kozak Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "item_nft/idl-build",
  "magic_token/idl-build",
  "resource_manager/idl-build"
]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
item_nft = { path = "../item_nft", features = ["cpi"] }
magic_token = { path = "../magic_token", features = ["cpi"] }
resource_manager = { path = "../resource_manager", features = ["cpi"] }