[package]
name = "resource_manager"
version = "0.1.0"
description = "Resource manager program for Kozak Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resource_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }